# YOLO_Bicycle

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: README.md
src/app/: __main__.py  app.py  settigs.py
src/app/services/: detection_service.py
src/notebooks/: YOLO.ipynb
src/yolo/: tracked_video.avi
